# microFS

./: .gitignore  Makefile  README.md  demo.py  goals.md  microfs.py  pyproject.toml  run_microfs.py
data/fs_state/metadata/: feature_groups.json  feature_views.json
data/fs_state/offline_store/: item_feature.parquet  user_activity.parquet  user_profile.parquet
data/fs_state/online_store/: online_store.json
data/raw_data/: item_feature_batch_1.csv  item_feature_batch_2.csv  user_activity_batch_1.csv  user_activity_batch_2.csv  user_profile_batch_1.csv  user_profile_batch_2.csv
examples/: README_CUSTOM_TRANSFORMERS.md  custom_transformers_example.py
microfs/: __init__.py  core.py  core_api.py  internal_logic.py  transform_functions.py  utils.py
models/: recommendation_clicks_v1_model.pkl
pipelines/: __init__.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
tests/: conftest.py  test_custom_transformers.py  test_feature_pipeline.py  test_inference_pipeline.py  test_training_pipeline.py
