[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microfs"
version = "0.1.0"
description = "A simplified feature store implementation for learning purposes"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/microfs"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
pyarrow = "^14.0.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
microfs-feature-pipeline = "pipelines.feature_pipeline:main"
microfs-training-pipeline = "pipelines.training_pipeline:main"
microfs-inference-pipeline = "pipelines.inference_pipeline:main"

[tool.black]
line-length = 100
target-version = ["py38"] 